--- a/idex.html
+++ b/idex.html
@@ -15,10 +15,10 @@
       <p>
         <label for="crypto">Crypto:</label>
         <select name="crypto" id="crypto">
-          <option value="btc">BTC - Bitcoin</option>
-          <option value="eth">ETH - Ethereum</option>
-          <option value="doge">DOGE - Dogecoin</option>
-          <option value="xrp">XRP</option>
+          <option value="BTC">BTC - Bitcoin</option>
+          <option value="ETH">ETH - Ethereum</option>
+          <option value="DOGE">DOGE - Dogecoin</option>
+          <option value="XRP">XRP</option>
         </select>
       </p>
     </div>
@@ -27,8 +27,8 @@
       <p>
         <label for="currency">Currency:</label>
         <select name="currency" id="currency">
-          <option value="eur">EUR (€)</option>
-          <option value="usd">USD ($)</option>
+          <option value="EUR">EUR (€)</option>
+          <option value="USD">USD ($)</option>
         </select>
       </p>
     </div>
