--- a/idex.html
+++ b/idex.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crypto Pal</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="/images/favicon.jpg" type="image/x-icon" />
   </head>
   <body>
     <header>
@@ -34,7 +35,8 @@
     </div>
 
     <div class="contentBox">
-      <p id="livePrice">Current Price:</p>
+      <p>Current Price:</p>
+      <p id="currentPrice">_</p>
     </div>
 
     <div class="contentBox">
@@ -48,14 +50,6 @@
     <div class="contentBox">
       <label for="investAmount">Invest Amount:</label>
       <input type="number" id="investAmount" />
-    </div>
-
-    <p></p>
-    &nbsp
-
-    <div class="contentBox">
-      <label for="currentPrice">Current Price:</label>
-      <input type="number" id="currentPrice" name="currentPrice" />
     </div>
 
     <p></p>
