--- a/idex.html
+++ b/idex.html
@@ -36,7 +36,7 @@
 
     <div class="contentBox">
       <p>Current Price:</p>
-      <p id="currentPrice">_</p>
+      <p id="currentPrice">...</p>
     </div>
 
     <div class="contentBox">
