--- a/idex.html
+++ b/idex.html
@@ -35,8 +35,8 @@
     </div>
 
     <div class="contentBox">
-      <p>Current Price:</p>
-      <p id="currentPrice">-</p>
+      <p>Live Price:</p>
+      <p id="livePrice">-</p>
     </div>
 
     <div class="contentBox">
